Bug 166349 - Selecting "Clear List" in the Start Center, pinned thumbnails are not displayed
Summary: Selecting "Clear List" in the Start Center, pinned thumbnails are not displayed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.2.0.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:25.8.0 target:25.2.5
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-26 04:42 UTC by nobu
Modified: 2025-06-10 06:50 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2025-04-26 04:42:57 UTC
Description:
Selecting "Clear List" in the Start Center, pinned thumbnails are not displayed.

Steps to Reproduce:
1. Open Start Center.
2. Pins one of the documents.
3. Menu - Files > Reacent Documents > "Clear List"

Actual Results:
4. All thumbnails, including pinned thumbnails, are hidden.
   Press the "Recent Documents" button to redisplay the pinned thumbnail.

Expected Results:
4. Only the pinned thumbnails remain visible without being erased.


Reproducible: Always


User Profile Reset: No

Additional Info:

The user does not know what the specification of the "Clear List" is is, but if it is the same feature as "Clear Recent Documents" that appears when you press the "Actions Icon" in the Start Center, you should get the same results.
---
Reproducible with

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a6e59a058306f0523f3686a9b084d010bd80e632
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 1 Saburo 2025-05-01 08:05:06 UTC
Reproduce with
Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: bbb074479178df812d175f709636b368952c2ce3
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

and

Version: 24.2.0.3 (x86) / LibreOffice Community
Build ID: da48488a73ddd66ea24cf16bbc4f7b9c08e9bea1
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: CL threaded

If you select "Clear List" from File - Recent Documents, thumbnails will no longer be displayed.
It will be displayed again if you change the filter type.
This does not happen if you select "Clear Recent Documents" from the hamburger menu in the top right.
Comment 2 Commit Notification 2025-05-22 07:59:50 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f7e781292fc97b1d5e845c219c59bd01833da5ee

tdf#166349 - Reload recent documents to show pinned items

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-06-10 06:50:17 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/d198b7431df31a3868f7b8d3daea427e8a4ac610

tdf#166349 - Reload recent documents to show pinned items

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.