tdf#166349 - Reload recent documents to show pinned items

After clearing the recent document list, reload the start center in order to show pinned items.

Change-Id: I248d28aaf8f4f9a823aab7630e37e8a410848433
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185608
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>